# nuget2nix

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  nuget.rs
